// Кодиум domain schema. Repository implementations live in
// `app/src/server/repositories/*.repository.ts` and depend on this generated client.
// Migrations live in `app/prisma/migrations/`.

generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["fullTextSearchPostgres"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ---------- Identity ----------

enum Role {
  LEARNER
  AUTHOR
  MODERATOR
  ADMIN
}

model User {
  id                      String    @id @default(cuid())
  workosUserId            String    @unique
  email                   String    @unique
  username                String    @unique
  displayName             String
  firstName               String?
  lastName                String?
  bio                     String    @default("")
  avatarUrl               String?
  role                    Role      @default(LEARNER)
  socials                 Json      @default("{}")
  appearance              Json      @default("{\"colorScheme\":\"dark\"}")
  totalXp                 Int       @default(0)
  streakDays              Int       @default(0)
  lastActiveDay           String?
  deletionRequestedAt     DateTime?
  bannedUntil             DateTime?
  banReason               String?
  chatBannedUntil         DateTime?
  chatBanReason           String?
  livechatConsentAt                  DateTime?
  livechatUsernameColor              String?
  /// When the user accepted processing of personal data (signup checkbox).
  personalDataProcessingConsentAt    DateTime?
  excludedFromLeaderboard Boolean   @default(false)
  commentsThreadId        String?   @unique
  planId                  String?
  joinedAt                DateTime  @default(now())
  updatedAt               DateTime  @updatedAt

  plan               Plan?                  @relation(fields: [planId], references: [id], onDelete: Restrict)
  commentsThread     Thread?                @relation("ProfileThread", fields: [commentsThreadId], references: [id])
  enrollments        Enrollment[]
  taskAttempts       CourseTaskAttempt[]
  authoredCourses    Course[]                 @relation("CourseAuthor")
  authoredCategories CourseCategory[]         @relation("CategoryAuthor")
  comments           Comment[]
  activities         UserActivity[]
  activitySnapshots  UserActivitySnapshot[]
  achievementTracks  UserAchievementTrack[]
  executions         Execution[]
  dailyAttempts      DailyChallengeAttempt[]
  weeklyAttempts     WeeklyChallengeAttempt[]
  snippets           SandboxSnippet[]
  auditLogs          AuditLog[]               @relation("AuditActor")
  livechatMessages   LivechatMessage[]
  aiCodeImproveJobs  AiCodeImproveJob[]

  @@index([username])
  @@index([totalXp])
  @@index([planId])
}

enum ContactMessageSource {
  HOME
  PLATFORM
}

/// Public contact form submissions (landing + platform footer).
model ContactMessage {
  id        String               @id @default(cuid())
  source    ContactMessageSource
  name      String
  email     String
  message   String               @db.Text
  createdAt DateTime             @default(now())

  @@index([createdAt])
}

/// Subscription / tier plan. `tierLevel` 0 = free; higher = more access. Exactly one row should have `isDefaultFree`.
model Plan {
  id                 String   @id @default(cuid())
  slug               String   @unique
  name               String
  shortDescription   String   @default("")
  /// Longer marketing copy (sanitized markdown) for `/plans` cards.
  marketingMarkdown  String   @default("")
  /// Ordered bullets `{ "iconKey", "text" }[]` for `/plans` feature lists.
  marketingFeatures  Json     @default("[]")
  /// At most one plan should be true; enforced in `AdminPlansRepository`.
  isBestseller       Boolean  @default(false)
  tierLevel          Int      @unique
  xpBonusPercent     Int      @default(0)
  sortOrder          Int      @default(0)
  isDefaultFree      Boolean  @default(false)
  /// When set, caps concurrent ACTIVE enrollments. `null` = no cap (premium).
  maxActiveCourses   Int?
  createdAt          DateTime @default(now())
  updatedAt          DateTime @updatedAt

  users User[]
}

// ---------- Catalog ----------

enum CourseStatus {
  DRAFT
  PUBLISHED
  HIDDEN
}

model CourseCategory {
  id               String   @id @default(cuid())
  slug             String   @unique
  title            String
  summary          String   @default("")
  iconKey          String?
  imageUrl         String?
  order            Int      @default(0)
  parentCategoryId String?
  authorId         String
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  parent   CourseCategory?  @relation("CategoryParent", fields: [parentCategoryId], references: [id])
  children CourseCategory[] @relation("CategoryParent")
  author   User             @relation("CategoryAuthor", fields: [authorId], references: [id])
  courses  Course[]

  @@index([parentCategoryId])
}

model Course {
  id            String       @id @default(cuid())
  slug          String       @unique
  title         String
  summary       String
  shortSummary  String       @default("")
  description   String       @default("")
  language      String
  difficulty    String
  durationHours Int          @default(0)
  xpReward      Int          @default(0)
  coverImage    String?
  status        CourseStatus @default(DRAFT)
  tags          String[]     @default([])
  order         Int          @default(0)
  authorId      String
  categoryId    String?
  publishedAt   DateTime?
  /// Minimum `Plan.tierLevel` required to enroll and access non–premium tasks.
  tierRequired  Int          @default(0)
  createdAt     DateTime     @default(now())
  updatedAt     DateTime     @updatedAt

  author             User             @relation("CourseAuthor", fields: [authorId], references: [id])
  category           CourseCategory?  @relation(fields: [categoryId], references: [id])
  modules            CourseModule[]
  enrollments        Enrollment[]
  aiCodeImproveJobs  AiCodeImproveJob[]

  @@index([status, language, difficulty])
  @@index([categoryId])
}

model CourseModule {
  id          String @id @default(cuid())
  courseId    String
  title       String
  description String @default("")
  order       Int

  course Course       @relation(fields: [courseId], references: [id], onDelete: Cascade)
  tasks  CourseTask[]

  @@unique([courseId, order])
}

enum TaskKind {
  THEORY
  TASK
  QUIZ
}

/// Polymorphic task: belongs to exactly ONE owner — a course module, a daily
/// challenge, or a weekly challenge. The invariant is enforced in repository
/// code (Prisma can't model CHECK constraints natively).
model CourseTask {
  id                String   @id @default(cuid())
  moduleId          String?
  dailyChallengeId  String?
  weeklyChallengeId String?
  title             String
  summary           String   @default("")
  description       String
  result            Json?
  initialData       Json     @default("{}")
  order             Int
  kind              TaskKind @default(TASK)
  estimatedMinutes  Int      @default(15)
  allowedLanguages  String[] @default([])
  isPremium         Boolean  @default(false)
  /// When `isPremium`, user needs `Plan.tierLevel >= minPlanTier` (and course tier).
  minPlanTier       Int      @default(1)

  module            CourseModule?      @relation(fields: [moduleId], references: [id], onDelete: Cascade)
  dailyChallenge    DailyChallenge?    @relation(fields: [dailyChallengeId], references: [id], onDelete: Cascade)
  weeklyChallenge   WeeklyChallenge?   @relation(fields: [weeklyChallengeId], references: [id], onDelete: Cascade)
  attempts          CourseTaskAttempt[]
  autotests         CourseTaskAutotest[]
  aiCodeImproveJobs AiCodeImproveJob[]

  @@unique([moduleId, order])
  @@unique([dailyChallengeId, order])
  @@unique([weeklyChallengeId, order])
  @@index([dailyChallengeId])
  @@index([weeklyChallengeId])
}

/// Per-task automated test cases. `input` is optional stdin to feed into the
/// solution; `expected` is the trimmed stdout the solution must produce.
model CourseTaskAutotest {
  id           String  @id @default(cuid())
  courseTaskId String
  order        Int     @default(0)
  name         String  @default("Тест")
  input        String?
  expected     String
  hidden       Boolean @default(false)

  task CourseTask @relation(fields: [courseTaskId], references: [id], onDelete: Cascade)

  @@unique([courseTaskId, order])
  @@index([courseTaskId])
}

enum AttemptStatus {
  PENDING
  ACTIVE
  SUCCESS
}

model CourseTaskAttempt {
  id           String        @id @default(cuid())
  courseTaskId String
  userId       String
  currentData  Json          @default("{}")
  status       AttemptStatus @default(PENDING)
  tryN         Int           @default(0)
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt

  task CourseTask @relation(fields: [courseTaskId], references: [id], onDelete: Cascade)
  user User       @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([courseTaskId, userId])
  @@index([userId, status])
}

// ---------- Enrollment ----------

enum EnrollmentStatus {
  ACTIVE
  FINISHED
  ABANDONED
}

model Enrollment {
  id                 String           @id @default(cuid())
  userId             String
  courseId           String
  status             EnrollmentStatus @default(ACTIVE)
  progressPercent    Int              @default(0)
  completedLessonIds String[]         @default([])
  currentLessonId    String?
  startedAt          DateTime         @default(now())
  finishedAt         DateTime?

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  course Course @relation(fields: [courseId], references: [id], onDelete: Cascade)

  @@unique([userId, courseId])
  @@index([userId, status])
}

// ---------- Activity / gamification ----------

model UserActivity {
  id        String   @id @default(cuid())
  userId    String
  type      String
  payload   Json     @default("{}")
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, createdAt])
}

model UserActivitySnapshot {
  id     String @id @default(cuid())
  userId String
  date   String
  count  Int    @default(0)
  level  Int    @default(0)

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, date])
  @@index([userId, date])
}

model Achievement {
  id          String   @id @default(cuid())
  slug        String   @unique
  title       String
  description String
  goal        Int?
  /// FontAwesome icon key. Used when `imageUrl` is null.
  coverImage  String?
  /// Uploaded image URL (S3). Takes precedence over `coverImage`.
  imageUrl    String?
  awardId     String?
  category    String
  rarity      String   @default("common")
  hidden      Boolean  @default(false)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  tracks UserAchievementTrack[]
}

enum AchievementStatus {
  ACTIVE
  SUCCESS
}

model UserAchievementTrack {
  id            String            @id @default(cuid())
  userId        String
  achievementId String
  status        AchievementStatus @default(ACTIVE)
  currentN      Int               @default(0)
  earnedAt      DateTime?
  createdAt     DateTime          @default(now())
  updatedAt     DateTime          @updatedAt

  user        User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  achievement Achievement @relation(fields: [achievementId], references: [id], onDelete: Cascade)

  @@unique([userId, achievementId])
}

// ---------- Comments ----------

model Thread {
  id         String   @id @default(cuid())
  totalCount Int      @default(0)
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  comments     Comment[]
  profileOwner User?     @relation("ProfileThread")
}

model Comment {
  id        String   @id @default(cuid())
  authorId  String
  threadId  String
  message   String
  likesN    Int      @default(0)
  dislikesN Int      @default(0)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  author User   @relation(fields: [authorId], references: [id], onDelete: Cascade)
  thread Thread @relation(fields: [threadId], references: [id], onDelete: Cascade)

  @@index([threadId, createdAt])
}

enum LivechatAuthorKind {
  AUTH
  GUEST
}

model LivechatMessage {
  id             String             @id @default(cuid())
  createdAt      DateTime           @default(now())
  body           String             @db.VarChar(800)
  authorKind     LivechatAuthorKind
  userId         String?
  guestSessionId String?
  authorLabel    String             @db.VarChar(120)
  usernameColor  String             @db.VarChar(32)

  user User? @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([createdAt(sort: Desc)])
  @@index([guestSessionId])
}

model LivechatGuestConsent {
  guestSessionId String   @id @db.VarChar(48)
  acceptedAt     DateTime @default(now())
}

// ---------- Outbox + idempotency + executions ----------

enum OutboxStatus {
  PENDING
  PUBLISHED
  FAILED
}

model OutboxEvent {
  id          String       @id @default(cuid())
  topic       String
  payload     Json
  status      OutboxStatus @default(PENDING)
  retries     Int          @default(0)
  lastError   String?
  createdAt   DateTime     @default(now())
  publishedAt DateTime?

  @@index([status, createdAt])
}

enum IdempotencyStatus {
  IN_PROGRESS
  COMPLETED
  FAILED
}

model IdempotencyKey {
  key       String            @id
  userId    String?
  endpoint  String
  response  Json?
  status    IdempotencyStatus @default(IN_PROGRESS)
  createdAt DateTime          @default(now())
  expiresAt DateTime

  @@index([expiresAt])
}

enum AiCodeImproveJobStatus {
  QUEUED
  STREAMING
  DONE
  FAILED
}

/// Async AI code review/improvement job. Chunks may be buffered in Redis until terminal state.
model AiCodeImproveJob {
  id                     String                 @id @default(cuid())
  userId                 String
  taskId                 String
  courseId               String
  /// Programming language of the solution being improved (`python`, `php`, …).
  language               String                 @default("python")
  idempotencyFingerprint String
  status                 AiCodeImproveJobStatus @default(QUEUED)
  errorCode              String?
  improvedCode           String                 @default("")
  explanationMarkdown    String                 @default("")
  openaiModelUsed        String?
  createdAt              DateTime               @default(now())
  updatedAt              DateTime               @updatedAt
  finishedAt             DateTime?

  user   User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  task   CourseTask @relation(fields: [taskId], references: [id], onDelete: Cascade)
  course Course     @relation(fields: [courseId], references: [id], onDelete: Cascade)

  @@unique([userId, idempotencyFingerprint])
  @@index([userId, createdAt])
  @@index([taskId])
  @@index([userId, taskId, language, status])
}

enum ExecutionStatus {
  QUEUED
  RUNNING
  SUCCESS
  FAILED
  TIMEOUT
  CANCELLED
}

enum ExecutionMode {
  RUN
  SUBMIT
}

enum ExecutionContext {
  COURSE
  SANDBOX
  DAILY
  WEEKLY
}

model Execution {
  id           String           @id @default(cuid())
  userId       String
  taskId       String?
  language     String
  code         String
  mode         ExecutionMode    @default(RUN)
  contextKind  ExecutionContext @default(COURSE)
  contextRef   String?
  status       ExecutionStatus  @default(QUEUED)
  stdout       String?
  stderr       String?
  runtimeMs    Int?
  testResults  Json?
  passed       Boolean?
  errorMessage String?
  enqueuedAt   DateTime         @default(now())
  startedAt    DateTime?
  finishedAt   DateTime?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, enqueuedAt])
  @@index([status])
  @@index([taskId])
}

// ---------- Sandbox / Daily / Weekly ----------

model SandboxSnippet {
  id        String   @id @default(cuid())
  userId    String
  language  String
  code      String
  title     String   @default("Без названия")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, updatedAt])
}

/// One row per UTC date. Owns its own ordered list of tasks via the
/// `CourseTask.dailyChallengeId` FK — challenges are independent of courses.
model DailyChallenge {
  id        String   @id @default(cuid())
  date      String   @unique
  createdAt DateTime @default(now())

  tasks    CourseTask[]
  attempts DailyChallengeAttempt[]
}

model DailyChallengeAttempt {
  id          String        @id @default(cuid())
  userId      String
  date        String
  taskIndex   Int
  status      AttemptStatus @default(ACTIVE)
  executionId String?
  solvedAt    DateTime?
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  user      User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  challenge DailyChallenge @relation(fields: [date], references: [date], onDelete: Cascade)

  @@unique([userId, date, taskIndex])
  @@index([userId, status])
}

/// One row per ISO week (`YYYY-Www`). Owns its own ordered list of tasks via
/// the `CourseTask.weeklyChallengeId` FK — challenges are independent of
/// courses.
model WeeklyChallenge {
  id        String   @id @default(cuid())
  isoWeek   String   @unique
  createdAt DateTime @default(now())

  tasks    CourseTask[]
  attempts WeeklyChallengeAttempt[]
}

model WeeklyChallengeAttempt {
  id          String        @id @default(cuid())
  userId      String
  isoWeek     String
  taskIndex   Int
  status      AttemptStatus @default(ACTIVE)
  executionId String?
  solvedAt    DateTime?
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  user      User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  challenge WeeklyChallenge @relation(fields: [isoWeek], references: [isoWeek], onDelete: Cascade)

  @@unique([userId, isoWeek, taskIndex])
  @@index([userId, status])
}

// ---------- Admin: content pages, audit, settings ----------

enum ContentPagePlacement {
  FOOTER
  HEADER
  HIDDEN
}

/// CMS-style page authored by admins. `body` is markdown; `placement` drives
/// which dynamic nav surface (footer / header) renders it.
model ContentPage {
  id        String               @id @default(cuid())
  slug      String               @unique
  title     String
  body      String
  excerpt   String               @default("")
  placement ContentPagePlacement @default(FOOTER)
  groupKey  String               @default("about")
  order     Int                  @default(0)
  published Boolean              @default(false)
  createdAt DateTime             @default(now())
  updatedAt DateTime             @updatedAt

  @@index([placement, published, order])
}

/// Append-only log of every admin write. `actor` cleared on user delete.
model AuditLog {
  id         String   @id @default(cuid())
  actorId    String?
  action     String
  targetType String
  targetId   String
  diff       Json     @default("{}")
  createdAt  DateTime @default(now())

  actor User? @relation("AuditActor", fields: [actorId], references: [id], onDelete: SetNull)

  @@index([targetType, targetId])
  @@index([actorId, createdAt])
  @@index([createdAt])
}

/// Generic key/value store for global admin-controlled toggles
/// (e.g. `allowed_languages`, `feature flags`).
model AppSetting {
  key       String   @id
  value     Json     @default("{}")
  updatedAt DateTime @updatedAt
}
